[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbmlmath"
version = "0.1.1"
authors = [
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
]
description = "SBML Math <-> SymPy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
dependencies = [
    "python-libsbml",
    "sympy",
    "pint",
    "lxml>=4.6.4",
]

[project.urls]
Homepage = "https://github.com/dweindl/sbmlmath"
Documentation = "https://sbmlmath.readthedocs.io/"
Repository = "https://github.com/dweindl/sbmlmath.git"
"Bug Tracker" = "https://github.com/dweindl/sbmlmath/issues"
PyPI = "https://pypi.org/project/sbmlmath/"

[project.optional-dependencies]
test = ["pytest>=7", "pre-commit>=3"]

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=doc/conf.py"
