[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sbmlmath"
dynamic = ["version"]
authors = [
    {name = "Daniel Weindl", email = "sci@danielweindl.de"},
]
description = "SBML Math <-> SymPy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
dependencies = [
    "python-libsbml>=5.20.4",
    "sympy",
    "pint",
    "lxml>=4.6.4",
]

[project.urls]
Homepage = "https://github.com/dweindl/sbmlmath"
Documentation = "https://sbmlmath.readthedocs.io/"
Repository = "https://github.com/dweindl/sbmlmath.git"
"Bug Tracker" = "https://github.com/dweindl/sbmlmath/issues"
PyPI = "https://pypi.org/project/sbmlmath/"

[project.optional-dependencies]
test = ["pytest>=7", "pre-commit>=3"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
exclude = ["sbml-test-suite"]
lint.extend-select = [
    "T", "W", "E", "F", "B", "C", "S", "I", "UP",
    # "D",
    # "ANN",
]
lint.ignore = [
    "S101",  # Use of assert detected
    "F405",  # star import
    "F403",  # star import
    "E501",  # Line too long
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"] # print statement

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=doc/conf.py"
